--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -4,25 +4,31 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="description" content="Password Generator Landing Page" />
-      <title>Password Generator</title>
+    <title>Password Generator</title>
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
       <!-- Anton, Baskerville, Raleway -->
-      <link href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap" rel="stylesheet">
-      <!-- Rajdhani -->
-      <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
-      <!-- Orbitron -->
-      <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
-      <!-- Bebas Neue -->
-      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-      <!-- Exo 2 -->
-      <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&display=swap" rel="stylesheet">
-      <!-- Rubik -->
-      <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
-      <!-- Quicksand -->
-      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
-      <!-- Nunito -->
-      <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap" rel="stylesheet">
+    <!-- Rajdhani -->
+<link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- Orbitron -->
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap" rel="stylesheet">
+
+<!-- Bebas Neue -->
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+<!-- Exo 2 -->
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- Rubik -->
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap" rel="stylesheet">
+
+<!-- Quicksand -->
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
+
+<!-- Nunito -->
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -47,43 +53,57 @@
       </section>
         
       <!--SECTION-->
-        <div class= "generate_button">
-          <button type="button" id="generator_button">Generar Contraseña</button>
-        </div>
+      <section id="generator_section">
+        <form class="password_form" action="/generate" method="POST">
+          <label for="password_length">Longitud de la contraseña:</label>
+          <div class="slider_length">
+            <input type="range" id="password_length" name="length" min="4" max="32" value="12" step="1">
+            <output id="length_output">12</output>
+          </div>
 
-        <div class="password_container">
+          <div class= "generate_button">
+            <button type="submit" id="generator_button">Generar contraseña</button>
+          </div>
+        </form>
+      </section>
+
+        <div id="password_container">
             <input type="text" id="password_result" readonly class="password-box" title="Generar contraseña" placeholder="La contraseña generada aparecerá aquí">
-            <button class="copy_button" id="copy_button" title="Copiar contraseña">
+            <button class="copy_button" id="copy_button" type="button" title="Copiar contraseña">
               <i class="fi fi-bs-copy-alt"></i>
             </button>
           </div>
           <div class="new_password">
-            <button id="update_password" type="button" title="Generar nueva contraseña">
+            <button id="update_password" type="submit" title="Generar nueva contraseña">
               <i class="fi fi-br-refresh"></i> Nueva contraseña
             </button>
         </div>
+      </form>
+        <div id="passwod_requirement">
+          <form id="password-options">
+            <fieldset>
+              <legend>Selecciona tus preferencias para crear la contraseña:</legend>
+              <label for="upper_case"><input id="upper_case" type="checkbox" name="upper_case" class="password-options" value="upper_case"/> Incluir mayúsculas</label>
+              <label for="lower_case"><input id="lower_case" type="checkbox" name="lower_case_case" class="password-options" value="lower_case"/> Incluir minúsculas</label>
+              <label for="numbers"><input id="numbers" type="checkbox" name="numbers" class="password-options" value="numbers"/> Incluir números</label>
+              <label for="symbols"><input id="symbols" type="checkbox" name="symbols" class="password-options" value="symbols"/> Incluir símbolos</label>
+              <label for="all_characters"><input id="all_characters" type="checkbox" name="all_characters" class="password-options" value="all_characters"/> Incluir todos los caracteres</label>
+            </fieldset>
+          </form>
 
-
-        <div>Botón Nueva Contraseña</div>
-        <div>Longitud de contraseña</div>
-        <div>Barra longitud de contraseña</div>
-        <div>Selecciona tus preferencias para crear la contraseña:
         </div>
-        <div>Mayúsculas</div>
-        <div>Minúsculas</div>
-        <div>Números</div>
-        <div>Símbolos</div>
-        <div>Todos los caracteres</div>
+      
+ 
         <div>Quiero que contenga la siguiente cadena</div>
         <div>Cuadro para la cadena que quiero</div>
       </section>
 
-      <!-- VIDEO OBLIGATORIO --> 
+      <!-- VIDEO OBLIGATORIO 
       <div id="video_box">
-        <p>Vídeo obligatorio</p>
+        <p>AQUÍ VA UN VÍDEO OBLIGATORIO PARA LA CERTIFICACIÓN</p>
         <video id="video" src="https://www.youtube.com/watch?reload=9&v=EYmY321DEmU&themeRefresh=1#ddg-play">
       </div>
-      <!-- FIN DEL VIDEO OBLIGATORIO -->
+      FIN DEL VIDEO OBLIGATORIO -->
 
       <section id="instrucciones_de_uso" class="instrucciones">
         <div="instructions">
