--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -94,11 +94,12 @@
         </div>
       
  
-        <div>Quiero que contenga la siguiente cadena</div>
-        <div>Cuadro para la cadena que quiero</div>
+        <!--OPCIONAL A PONER EN UN FUTURO 
+      <div>Quiero que contenga la siguiente cadena</div>
+        <div>Cuadro para la cadena que quiero</div>-->
       </section>
 
-      <!-- VIDEO OBLIGATORIO 
+      <!-- VIDEO OBLIGATORIO  PARA LA CERTIFICACIÓN
       <div id="video_box">
         <p>AQUÍ VA UN VÍDEO OBLIGATORIO PARA LA CERTIFICACIÓN</p>
         <video id="video" src="https://www.youtube.com/watch?reload=9&v=EYmY321DEmU&themeRefresh=1#ddg-play">
@@ -106,19 +107,23 @@
       FIN DEL VIDEO OBLIGATORIO -->
 
       <section id="instrucciones_de_uso" class="instrucciones">
-        <div="instructions">
+        <div class="instructions">
           <h2>Cómo utilizar el generador de contraseñas</h2>
         </div>
         <div id="steps">
-          <div id="step1">Paso 1
-            <p>Selecciona las características que quieres para tu contraseña.</p>
+          <div class="step">
+            <h3>Paso 1: Ajusta la longitud</h3>
+            <p>Mueve el control de la barra para elegir la longitud de tu contraseña.</p>
           </div>
-          <div id="step2">Paso 2
-            <p>Pulsa el botón generar contraseña.</p>
+          <div class="step">
+            <h3>Paso 2: Define las características</h3>
+            <p>Selecciona y marca si tendrá mayúsculas, minúsculas, números, símbolos o todos los caracteres.</p>
           </div>
-          <div id="step3">Cuadro Paso 3
-            <p>Copia tu contraseña</p>
+          <div class="step">
+            <h3>Paso 3: Genera y copia</h3>
+            <p>Haz clic en generar contraseña, copiarla o generar una nueva contraseña.</p>
           </div>
+        </div>
       </section>
 
       <section id="faqs" class="faqs">
@@ -135,7 +140,7 @@
         <div>¿Guardáis las contraseñas generadas?</div>
         <div>¿Cuáles son las contraseñas más utilizadas?</div>
       </section>
-      <!-- FORMULARIO OBLIGATORIO -->
+      <!-- FORMULARIO OBLIGATORIO PARA LA CERTIFICACIÓN -->
       <form id="form" method="post" action='https://www.freecodecamp.com/email-submit'>
         <fieldset>
           <p>¿Tienes alguna duda o sugerencia de mejora?</p>
@@ -154,5 +159,5 @@
 
     </div>
 
-  <body>
+  </body>
 </html>
