--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -55,7 +55,7 @@
       <!--SECTION-->
       <section id="generator_section">
         <form class="password_form" action="/generate" method="POST">
-          <label for="password_length">Longitud de la contraseña:</label>
+          <label for="passw_length">Longitud de la contraseña:</label>
           <div class="slider_length">
             <input type="range" id="password_length" name="length" min="4" max="32" value="12" step="1">
             <output id="length_output">12</output>
@@ -78,7 +78,7 @@
               <i class="fi fi-br-refresh"></i> Nueva contraseña
             </button>
         </div>
-      </form>
+      
         <div id="passwod_requirement">
           <form id="password-options">
             <fieldset>
@@ -94,12 +94,11 @@
         </div>
       
  
-        <!--OPCIONAL A PONER EN UN FUTURO 
-      <div>Quiero que contenga la siguiente cadena</div>
+        <!--<div>Quiero que contenga la siguiente cadena</div>
         <div>Cuadro para la cadena que quiero</div>-->
       </section>
 
-      <!-- VIDEO OBLIGATORIO  PARA LA CERTIFICACIÓN
+      <!-- VIDEO OBLIGATORIO 
       <div id="video_box">
         <p>AQUÍ VA UN VÍDEO OBLIGATORIO PARA LA CERTIFICACIÓN</p>
         <video id="video" src="https://www.youtube.com/watch?reload=9&v=EYmY321DEmU&themeRefresh=1#ddg-play">
@@ -117,16 +116,18 @@
           </div>
           <div class="step">
             <h3>Paso 2: Define las características</h3>
-            <p>Selecciona y marca si tendrá mayúsculas, minúsculas, números, símbolos o todos los caracteres.</p>
+            <p>Selecciona y las características que tendrá la contraseña.</p>
           </div>
           <div class="step">
             <h3>Paso 3: Genera y copia</h3>
-            <p>Haz clic en generar contraseña, copiarla o generar una nueva contraseña.</p>
+            <p>Haz clic en generar contraseña, cópiala o crea una nueva contraseña.</p>
           </div>
         </div>
       </section>
 
-      <section id="faqs" class="faqs">
+
+      <!-- FAQs -->
+      <section id="faqs" class="faqs-section">
         <div id="faq">
           <h2>Preguntas frecuentes</h2>
         </div>
@@ -140,7 +141,7 @@
         <div>¿Guardáis las contraseñas generadas?</div>
         <div>¿Cuáles son las contraseñas más utilizadas?</div>
       </section>
-      <!-- FORMULARIO OBLIGATORIO PARA LA CERTIFICACIÓN -->
+      <!-- FORMULARIO OBLIGATORIO -->
       <form id="form" method="post" action='https://www.freecodecamp.com/email-submit'>
         <fieldset>
           <p>¿Tienes alguna duda o sugerencia de mejora?</p>
