--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -116,27 +116,22 @@
           <details class="faq-item" open>
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Qué es una contraseña segura?</summary>
             <div class="faq-answer">
-              <p>Una contraseña segura cuenta con <strong>mínimo 16 caracteres</strong>, generada de forma <strong>aleatoria</strong>, que combina mayúsculas, minúsculas, números y símbolos. Hoy se priorizan las <strong>"frases de paso"</strong> (secuencias de 4+ palabras aleatorias, como "CaféGuitarraLluviaTren#24") por su facilidad de recordar y mayor resistencia a ataques.</p>
+              <p>Una contraseña segura cuenta con al menos 12 caracteres (siendo lo recomendable 16), generada de forma aleatoria y combinando mayúsculas, minúsculas, números y símbolos.</p>
             </div>
           </details>
 
           <details class="faq-item">
-            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Por qué debo usar contraseñas seguras?</summary>
+            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Por qué debo utilizar contraseñas seguras?</summary>
             <div class="faq-answer">
-              <p>Para <strong>bloquear accesos no autorizados</strong> a cuentas, proteger datos personales, evitar robo de identidad, cumplir normativas (como GDPR) y prevenir daños financieros o reputacionales.</p>
+              <p>Para evitar accesos no autorizados a cuentas, proteger datos personales, evitar robos de identidad, cumplir normativas de seguridad y prevenir daños.</p>
             </div>
           </details>
                 
           <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Es seguro este generador de contraseñas?</summary>
             <div class="faq-answer">
-              <p>Sí, siempre que:</p>
-                <ul>
-                  <li>Sea <strong>código abierto y auditado</strong> por terceros.</li>
-                  <li>Use <strong>criptografía fuerte</strong> (ej. AES-256 o bcrypt).</li>
-                  <li>Las contraseñas <strong>se generen localmente</strong> en tu dispositivo (nunca en servidores externos).</li>
-                  <li>Su código esté <strong>libre de vulnerabilidades</strong> conocidas.</li>
-                </ul>
+              <p>Sí, es totalmente seguro y de confianza, ya que las contraseñas se generan de forma local en tu dispositivo, sin almacenarse nunca en nuestros servidores.</p>
+              <p>En cuanto a la contraseña generada aleatoriamente, cuantos más requisitos y longitur le apliques, más segura y robusta será.</p>
             </div>
           </details>
 
@@ -145,24 +140,24 @@
             <div class="faq-answer">
               <p>Sí, mediante:</p>
               <ul>
-                <li><strong>Fuerza bruta</strong> (pruebas masivas de combinaciones)</li>
-                <li><strong>Ataques de diccionario</strong> (uso de palabras comunes)</li>
-                <li><strong>Credential stuffing</strong> (reutilización de credenciales filtradas)</li>
-                <li><strong>Phishing</strong> (engaños para revelar claves)</li>
-                <li><strong>Keyloggers</strong> (malware que registra teclas pulsadas)</li>
-                <li><strong>Filtraciones de servicios terceros</strong> (exposición en brechas de datos)</li>
+                <li>Fuerza bruta(pruebas masivas de combinaciones).</li>
+                <li>Ataques de diccionario (uso de palabras comunes).</li>
+                <li>Credential stuffing (reutilización de credenciales filtradas).</li>
+                <li>Phishing (engaños para revelar claves).</li>
+                <li>Keyloggers (malware que registra teclas pulsadas).</li>
+                <li>Filtraciones de terceros (exposición en brechas de datos).</li>
               </ul>
             </div>
           </details>
 
           <details class="faq-item">
-            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Cómo evito contraseñas vulnerables?</summary>
+            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Cómo evito tener contraseñas vulnerables?</summary>
             <div class="faq-answer">
               <ul>
-                <li>Usa un <strong>gestor de contraseñas</strong> con cifrado de extremo a extremo.</li>
-                <li><strong>Jamás reutilices contraseñas</strong> (una clave única por cuenta).</li>
-                <li>Activa <strong>autenticación de dos factores (2FA)</strong> en todas las cuentas críticas.</li>
-                <li><strong>Cambia contraseñas solo tras brechas</strong> (no periódicamente, según NIST).</li>
+                <li>Utiliza un gestor de contraseñas con cifrado de extremo a extremo.</li>
+                <li>No reutilices contraseñas (una clave única por cuenta).</li>
+                <li>Activa la autenticación de dos factores.</li>
+                <li>Cambia y renueva contraseñas solo tras brechas de seguridad (no periódicamente).</li>
               </ul>
             </div>
           </details>
@@ -171,22 +166,22 @@
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> Consejos para crear una contraseña segura</summary>
             <div class="faq-answer">
               <ol>
-                <li><strong>Emplea frases de paso</strong>: 4+ palabras aleatorias y largas (ej. "ManzanaVolcánSillaNube").</li>
-                <li><strong>Añade complejidad</strong>: Inserta números/símbolos de forma natural (ej. "Manzana!Volcán8Silla?Nube").</li>
-                <li><strong>Evita sustituciones predecibles</strong> (ej. "a" por "@"), ya que los atacantes las conocen.</li>
+                <li>Utiliza "frases de paso” (4 o más palabras aleatorias, con más de 16 caracteres en total, como por ejemplo "MesaVacíoSolImpresora").</li>
+                <li>Añade símbolos, letras y números, aplica sustituciones impredecibles y dale complejidad (por ejemplo "Mesa!Vacío6Sol?Impresora").</li>
+                <li>Evita sustituciones predecibles (ej. "a" por "@" o la "i" por "1"), ya que los atacantes son conscientes de ello.</li>
               </ol>
             </div>
           </details>
 
           <details class="faq-item">
-            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> Riesgos de no usar contraseñas seguras</summary>
+            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> Riesgos de no contar con contraseñas seguras</summary>
             <div class="faq-answer">
               <ul>
-                <li><strong>Robo de identidad</strong> y suplantación.</li>
-                <li><strong>Pérdida de fondos</strong> en cuentas bancarias.</li>
-                <li><strong>Filtración de datos sensibles</strong> (fotos, documentos).</li>
-                <li><strong>Daño reputacional</strong> (redes sociales o emails comprometidos).</li>
-                <li><strong>Compromiso de contactos</strong> (ataques a tu lista de amigos/clientes).</li>
+                <li>Robo y suplantación de identidad.</li>
+                <li>Pérdida de fondos en cuentas bancarias.</li>
+                <li>Filtración de datos sensibles (fotos, documentos).</li>
+                <li>Daño reputacional (redes sociales o emails comprometidos).</li>
+                <li>Compromiso de contactos (ataques a tu lista de contactos).</li>
               </ul>
             </div>
           </details>
@@ -194,59 +189,43 @@
           <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Guardáis las contraseñas generadas?</summary>
             <div class="faq-answer">
-              <p><strong>No, en ningún momento</strong>. Las contraseñas <strong>se generan y procesan solo en tu dispositivo</strong> (navegador o app). Nunca llegan a nuestros servidores ni las almacenamos. Tu responsabilidad es guardarlas en un gestor de contraseñas cifrado (como Bitwarden o KeePass).</p>
-            </div>
+              <p>No, en ningún momento. Las contraseñas se generan y procesan solo en tu dispositivo. Nunca llegan a nuestros servidores.</p>p>
+              <p>Una vez generada la contraseña, tú eres la persona responsable de guardalas en un gestor de contraseñas.</p>
           </details>
 
           <details class="faq-item">
-             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Cuáles son las contraseñas más inseguras?</summary>
+             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Cuáles son las contraseñas más vulnerables o las más utilizadas?</summary>
               <div class="faq-answer">
-                <p>Según filtraciones públicas: <strong>123456, password, qwerty, 111111, 123456789 y abc123</strong>, son las primeras que prueban los atacantes.</p>
+                <p>Las contraseñas más vulnerables son: 123456, password, contraseña, qwerty, 111111, 123456789 y abc123.</p>
+                <p>Estas contraseñas son las primeras que prueban los atacantes, por lo que en todo caso recomendamos no utilizarlas.</p>
               </div>
           </details>
 
           <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Con qué frecuencia debo cambiar mis contraseñas?</summary>
             <div class="faq-answer">
-              <p><strong>Solo en estos casos</strong>:</p>
+              <p>Solo en estos casos:</p>
                 <ul>
-                  <li>Tras una <strong>brecha de seguridad</strong> en un servicio que uses.</li>
-                  <li>Si <strong>sospechas compromiso</strong> (actividad inusual en tu cuenta).</li>
+                  <li>Tras una brecha de seguridad en un servicio que uses.</li>
+                  <li>Si sospechas de actividad inusual en tu cuenta.</li>
                 </ul>
-              <p><em>No se recomiendan cambios periódicos</em> (ej. cada 6 meses), pues generan claves débiles y reutilización.</p>
+              <p><em>No se recomiendan cambios periódicos</em> (ej. cada 6-12 meses), ya que gracias a ello, se generan claves débiles, con alta tendencia a la reutilización.</p>
             </div>
           </details>
 
           <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Qué es la autenticación de dos factores (2FA)?</summary>
             <div class="faq-answer">
-              <p>Un <strong>segundo paso de verificación</strong> tras ingresar tu contraseña. Usa:</p>
-                <ul>
-                  <li><strong>Apps de autenticación</strong> (Google Authenticator, Authy)</li>
-                  <li><strong>Llaves físicas</strong> (YubiKey)</li>
-                  <li><strong>Biometría</strong> (huella o rostro)</li>
-                </ul>
-              <p><strong class="warning">Evita SMS</strong>: Pueden ser interceptados.</p>
+              <p>Es un segundo paso de verificación tras ingresar tu contraseña, lo que garantiza una mayor seguridad</p>
             </div>
           </details>
 
-          <details class="faq-item">
-            <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Cómo funciona un gestor de contraseñas?</summary>
-            <div class="faq-answer">
-              <ul>
-                <li><strong>Crea y almacena</strong> contraseñas únicas en una <strong>bóveda cifrada</strong>.</li>
-                <li><strong>Autocompleta</strong> credenciales en páginas web/apps.</li>
-                <li><strong>Sincroniza</strong> entre dispositivos con cifrado fuerte (ej. AES-256).</li>
-                <li>Solo necesitas recordar una <strong>"contraseña maestra"</strong> para acceder.</li>
-               </ul>
-            </div>
-          </details>
         </div>
       </section>
 
       <section id="form">
         <h2>¿Tienes alguna duda o sugerencia?</h2>
-        <form id="form" class="form-container" method="post" action='https://www.freecodecamp.com/email-submit'>
+        <form id="form" class="form-container" method="post" <!--action='' --></form>>
           <div class="form-group">
             <label for="email">Email:</label>
             <input id="email" name="email" type="email" placeholder="Tu email" required>
@@ -263,8 +242,10 @@
 
     <footer>
       <div class="footer-content">
-            <p> Password Generator - Generador de contraseñas seguras</p>
+            <p>2025 Password Generator - Generador de contraseñas seguras</p>
+            <p>Siguiendo las mejores prácticas y pautas de ciberseguridad</p>
         </div>
     </footer>
+    
   </body>
 </html>
