--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -225,7 +225,7 @@
 
       <section id="form">
         <h2>¿Tienes alguna duda o sugerencia?</h2>
-        <form id="form" class="form-container" method="post" <!--action='' --></form>>
+        <form id="form" class="form-container" method="post" action=''>
           <div class="form-group">
             <label for="email">Email:</label>
             <input id="email" name="email" type="email" placeholder="Tu email" required>
@@ -246,6 +246,5 @@
             <p>Siguiendo las mejores prácticas y pautas de ciberseguridad</p>
         </div>
     </footer>
-    
   </body>
 </html>
