--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -53,10 +53,10 @@
           </div>
                 
           <div class="button-group">
-            <button type="button" class="btn btn-primary" id="generator_button">
+            <button type="button" class="btn btn btn_generate" id="generator_button">
               <i class="fas fa-key"></i> Generar contraseña
             </button>
-            <button type="button" class="btn btn-secondary" id="update_password">
+            <button type="button" class="btn btn_newpassword" id="update_password">
               <i class="fas fa-sync-alt"></i> Nueva contraseña
             </button>
           </div>
@@ -131,7 +131,7 @@
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Es seguro este generador de contraseñas?</summary>
             <div class="faq-answer">
               <p>Sí, es totalmente seguro y de confianza, ya que las contraseñas se generan de forma local en tu dispositivo, sin almacenarse nunca en nuestros servidores.</p>
-              <p>En cuanto a la contraseña generada aleatoriamente, cuantos más requisitos y longitur le apliques, más segura y robusta será.</p>
+              <p>En cuanto a la contraseña generada aleatoriamente, cuantos más requisitos y longitud le apliques, más segura y robusta será.</p>
             </div>
           </details>
 
@@ -166,14 +166,14 @@
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> Consejos para crear una contraseña segura</summary>
             <div class="faq-answer">
               <ol>
-                <li>Utiliza "frases de paso” (4 o más palabras aleatorias, con más de 16 caracteres en total, como por ejemplo "MesaVacíoSolImpresora").</li>
+                <li>Utiliza 'frases de paso' (4 o más palabras aleatorias, con más de 16 caracteres en total, como por ejemplo "MesaVacíoSolImpresora").</li>
                 <li>Añade símbolos, letras y números, aplica sustituciones impredecibles y dale complejidad (por ejemplo "Mesa!Vacío6Sol?Impresora").</li>
                 <li>Evita sustituciones predecibles (ej. "a" por "@" o la "i" por "1"), ya que los atacantes son conscientes de ello.</li>
               </ol>
             </div>
           </details>
 
-          <details class="faq-item">
+            <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> Riesgos de no contar con contraseñas seguras</summary>
             <div class="faq-answer">
               <ul>
@@ -189,8 +189,9 @@
           <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Guardáis las contraseñas generadas?</summary>
             <div class="faq-answer">
-              <p>No, en ningún momento. Las contraseñas se generan y procesan solo en tu dispositivo. Nunca llegan a nuestros servidores.</p>p>
+              <p>No, en ningún momento. Las contraseñas se generan y procesan solo en tu dispositivo. Nunca llegan a nuestros servidores.</p>
               <p>Una vez generada la contraseña, tú eres la persona responsable de guardalas en un gestor de contraseñas.</p>
+            </div>
           </details>
 
           <details class="faq-item">
@@ -209,14 +210,14 @@
                   <li>Tras una brecha de seguridad en un servicio que uses.</li>
                   <li>Si sospechas de actividad inusual en tu cuenta.</li>
                 </ul>
-              <p><em>No se recomiendan cambios periódicos</em> (ej. cada 6-12 meses), ya que gracias a ello, se generan claves débiles, con alta tendencia a la reutilización.</p>
+              <p>No se recomiendan cambios periódicos (por ejemplo cada 6-12 meses), ya que gracias a ello, se generan claves débiles, con alta tendencia a la reutilización.</p>
             </div>
           </details>
 
           <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Qué es la autenticación de dos factores (2FA)?</summary>
             <div class="faq-answer">
-              <p>Es un segundo paso de verificación tras ingresar tu contraseña, lo que garantiza una mayor seguridad</p>
+              <p>Es un segundo paso de verificación tras ingresar tu contraseña, lo que garantiza una mayor seguridad.</p>
             </div>
           </details>
 
@@ -235,15 +236,15 @@
             <label for="suggestion">Duda o sugerencia:</label>
             <textarea id="suggestion" name="suggestion" placeholder="Introduce tus dudas o sugerencias"></textarea>
           </div>
-          <button type="submit" id="submit" class="btn btn-primary">Enviar mensaje</button>
+          <button type="submit" id="submit" class="btn btn_generate">Enviar mensaje</button>
         </form>
       </section>
     </main>
 
     <footer>
       <div class="footer-content">
-            <p>2025 Password Generator - Generador de contraseñas seguras</p>
-            <p>Siguiendo las mejores prácticas y pautas de ciberseguridad</p>
+            <p>Password Generator - Generador de contraseñas seguras</p>
+            <p>Aurora Poves Serradilla 2025</p>
         </div>
     </footer>
   </body>
