--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -113,7 +113,7 @@
       <section id="faqs" class="faq-section">
         <h2>Preguntas Frecuentes</h2>
         <div class="faq-container">
-          <details class="faq-item" open>
+          <details class="faq-item">
             <summary class="faq-question"><i class="fas fa-shield-alt security-icon"></i> ¿Qué es una contraseña segura?</summary>
             <div class="faq-answer">
               <p>Una contraseña segura cuenta con al menos 12 caracteres (siendo lo recomendable 16), generada de forma aleatoria y combinando mayúsculas, minúsculas, números y símbolos.</p>
