--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -16,7 +16,7 @@
     <header id="header">
       <div class="header-container">
         <div class="logo">
-          <div class="logo-text">Instant Password Generator</div>
+          <div class="logo-text">Password Generator</div>
         </div>
         <nav id="nav-bar">
           <ul>
