--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -20,7 +20,7 @@
         </div>
         <nav id="nav-bar">
           <ul>
-            <li><a href="#generator_section" class="nav-link">Generador de contraseñas</a></li>
+            <li><a href="#generator_section" class="nav-link">Generador</a></li>
             <li><a href="#instrucciones_de_uso" class="nav-link">Instrucciones</a></li>
             <li><a href="#faqs" class="nav-link">FAQs</a></li>
           </ul>
@@ -30,7 +30,7 @@
 
     <main class="container">
       <section id="hero-section">
-        <h1 id="hero-title">Password Generator</h1>
+        <h1 id="hero-title">Instant Password Generator</h1>
         <h2 id="hero-subtitle">Tus contraseñas seguras en un click</h2>
       </section>
         
@@ -244,7 +244,7 @@
     <footer>
       <div class="footer-content">
             <p>Password Generator - Generador de contraseñas seguras</p>
-            <!--<p>Aurora Poves Serradilla 2025</p>-->
+            <p>Aurora Poves Serradilla 2025</p>
         </div>
     </footer>
   </body>
