--- a/17. Product Landing Page/index.html
+++ b/17. Product Landing Page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Password Generator" />
-    <title>Password Generator</title>
+    <title>PassW Generator</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     <header id="header">
       <div class="header-container">
         <div class="logo">
-          <div class="logo-text">Password Generator</div>
+          <div class="logo-text">PassW Generator</div>
         </div>
         <nav id="nav-bar">
           <ul>
@@ -30,7 +30,7 @@
 
     <main class="container">
       <section id="hero-section">
-        <h1 id="hero-title">Instant Password Generator</h1>
+        <h1 id="hero-title">PassW Generator</h1>
         <h2 id="hero-subtitle">Tus contraseñas seguras en un click</h2>
       </section>
         
@@ -243,7 +243,7 @@
 
     <footer>
       <div class="footer-content">
-            <p>Password Generator - Generador de contraseñas seguras</p>
+            <p>PassW Generator - Generador de contraseñas seguras</p>
             <p>Aurora Poves Serradilla 2025</p>
         </div>
     </footer>
